--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -3,22 +3,20 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title></title>
+    <script src="Script1.js"></script>
+    <title>D-Перезагрузка</title>
 </head>
 <body>
     <form name="ux" align="center">
-        <progress name="health" value="100" max="100" align="left">
-        </progress>
+        <progress name="health" value="100" max="100" align="left"></progress>
         <output name="coins">100</output>
-    </form>
     </form>
     <form name="main" align="center">
         <div name="discr">
-        c<br/>м<br />с
+            начнем?
         </div>
         <br />
-        <input type="button" name="Action1" value="Action1" />
-        <input type="button" name="Action2" value="Action2" />
+        <input type="button" name="Action2" value="начнем" onclick="nextPage(this.form)" />
     </form>
 </body>
 </html>
