--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -11,12 +11,12 @@
         <progress name="health" value="100" max="100" align="left"></progress>
         <output name="coins">100</output>
     </form>
-    <form name="main" align="center">
+    <form name="main" align="center" >
         <div name="discr">
             начнем?
         </div>
         <br />
-        <input type="button" name="Action2" value="начнем" onclick="nextPage(this.form)" />
+        <input type="button" name="Action2" value="начнем" onclick="nextPage(this.form, null)" />
     </form>
 </body>
 </html>
