--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <form name="ux" align="center">
-        <progress name="health" value="100" max="100" align="left"></progress>
+        <progress name="health" value=100 max="100" align="left"></progress>
         <output name="coins">100</output>
     </form>
     <form name="main" align="center" >
