--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -4,16 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <script src="Script1.js"></script>
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>D-Перезагрузка</title>
 </head>
 <body>
         <form name="main" align="center">
-            <div name="discr">
-                начнем?
-            </div>
+            <img src="im/hello.jpg" alt="Hello there" />
             <br />
-            <input type="button" name="Action2" value="начнем" onclick="nextPage(this.form, null)" />
+            <button name="Action1" value="начнем" onclick="nextPage(this.form, null)"><img src="im/start.jpg"></buttonclass="button7">
         </form>
-
 </body>
 </html>
