--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <script src="Script1.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>D-Перезагрузка</title>
+    <title>D-ReBoot</title>
 </head>
 <body>
         <form name="main" align="center">
