--- a/HTMLPage1.html
+++ b/HTMLPage1.html
@@ -5,13 +5,19 @@
     <meta charset="utf-8" />
     <script src="Script1.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css" />
-    <title>D-ReBoot</title>
+    <title>D-Перезагрузка</title>
 </head>
 <body>
-        <form name="main" align="center">
-            <img src="im/hello.jpg" alt="Hello there" />
-            <br />
-            <button name="Action1" value="начнем" onclick="nextPage(this.form, null)"><img src="im/start.jpg"></buttonclass="button7">
-        </form>
+    <h1 align="center"> D-Перезагрузка</h1>
+    <form name="main" align="center">
+        <img src="im/hello.jpg" alt="Hello there" />
+        <br />
+        <button name="Action1" value="начнем" class="button19" onclick="nextPage(this.form, null)">
+            Начать
+        </button><br /><br />
+        <button name="Action2" value="об игре" class="button19" onclick="aboutThis(this.form)">
+            Об игре
+        </button>
+    </form>
 </body>
 </html>
